--- a/software/excel_integration.ipynb
+++ b/software/excel_integration.ipynb
@@ -2,50 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                       Dataverse          Unnamed: 1 Unnamed: 2  \\\n",
-      "0  Features Left to be Developed                 NaN        NaN   \n",
-      "1                        Sr. No.             Feature   Category   \n",
-      "2                              1         Radar chart     Button   \n",
-      "3                              2  Plotting equations     Button   \n",
-      "4                              3                Maps     Button   \n",
-      "5                              4          3D Scatter     Button   \n",
-      "6                              5          3D Surface     Button   \n",
-      "7                              6   Excel integration     Window   \n",
-      "8                              7     Download option     Window   \n",
-      "\n",
-      "           Unnamed: 3  \n",
-      "0                 NaN  \n",
-      "1  To be Developed by  \n",
-      "2                  Me  \n",
-      "3                  Me  \n",
-      "4                  Me  \n",
-      "5                  OS  \n",
-      "6                  OS  \n",
-      "7                  Me  \n",
-      "8                  Me  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
-    "\n",
-    "df = pd.read_excel(r'C:\\Users\\iamte\\OneDrive\\Desktop\\Dataverse\\software\\excel_py_dataverse.xlsx')\n",
-    "print(df)"
+    "df = pd.read_excel(r'C:\\Users\\iamte\\OneDrive\\Desktop\\Dataverse\\software\\excel_py_dataverse.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -111,6 +79,34 @@
        "      <td>Button</td>\n",
        "      <td>Me</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3D Scatter</td>\n",
+       "      <td>Button</td>\n",
+       "      <td>OS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3D Surface</td>\n",
+       "      <td>Button</td>\n",
+       "      <td>OS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Excel integration</td>\n",
+       "      <td>Window</td>\n",
+       "      <td>Me</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Download option</td>\n",
+       "      <td>Window</td>\n",
+       "      <td>Me</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -122,22 +118,56 @@
        "2                              1         Radar chart     Button   \n",
        "3                              2  Plotting equations     Button   \n",
        "4                              3                Maps     Button   \n",
+       "5                              4          3D Scatter     Button   \n",
+       "6                              5          3D Surface     Button   \n",
+       "7                              6   Excel integration     Window   \n",
+       "8                              7     Download option     Window   \n",
        "\n",
        "           Unnamed: 3  \n",
        "0                 NaN  \n",
        "1  To be Developed by  \n",
        "2                  Me  \n",
        "3                  Me  \n",
-       "4                  Me  "
+       "4                  Me  \n",
+       "5                  OS  \n",
+       "6                  OS  \n",
+       "7                  Me  \n",
+       "8                  Me  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       Dataverse          Unnamed: 1 Unnamed: 2          Unnamed: 3\n",
+      "0  Features Left to be Developed                 NaN        NaN                 NaN\n",
+      "1                        Sr. No.             Feature   Category  To be Developed by\n",
+      "2                              1         Radar chart     Button                  Me\n",
+      "3                              2  Plotting equations     Button                  Me\n",
+      "4                              3                Maps     Button                  Me\n",
+      "5                              4          3D Scatter     Button                  OS\n",
+      "6                              5          3D Surface     Button                  OS\n",
+      "7                              6   Excel integration     Window                  Me\n",
+      "8                              7     Download option     Window                  Me\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.to_string())"
    ]
   }
  ],
